--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,12 +21,13 @@ include(tfc_config)
 include(tfc_warnings)
 include(tfc_docs)
 include(tfc_cpack)
+include(std-modules-clang)
+
+add_subdirectory(libs)
 
 if (BUILD_EXES)
 add_subdirectory(exes)
 endif()
-
-add_subdirectory(libs)
 
 if (BUILD_DOCS)
   add_subdirectory(docs)
