--- a/libs/operation_mode/CMakeLists.txt
+++ b/libs/operation_mode/CMakeLists.txt
@@ -23,6 +23,7 @@ target_link_libraries(operation_mode
     tfc::stx
     tfc::dbus_util
     magic_enum::magic_enum
+    mod::fmt
   PRIVATE
     PkgConfig::SDBUSPLUS
     Boost::boost
