--- a/exes/ethercat/systemd/ethercat@.service
+++ b/exes/ethercat/systemd/ethercat@.service
@@ -4,7 +4,7 @@ Requires=dbus.socket
 After=dbus.socket
 
 [Service]
-ExecStart=@CMAKE_INSTALL_PREFIX@/ethercat --iface %i
+ExecStart=@CMAKE_INSTALL_PREFIX@/@CMAKE_INSTALL_BINDIR@/ethercat --iface %i
 StandardOutput=journal
 StandardError=journal
 
