--- a/exes/ethercat/systemd/ethercat@.service
+++ b/exes/ethercat/systemd/ethercat@.service
@@ -7,6 +7,7 @@ After=dbus.socket
 ExecStart=@CMAKE_INSTALL_PREFIX@/@CMAKE_INSTALL_BINDIR@/ethercat --iface %i
 StandardOutput=journal
 StandardError=journal
+LimitNOFILE=8192
 
 [Install]
 WantedBy=multi-user.target
