--- a/cmake/systemd/tfc@.service
+++ b/cmake/systemd/tfc@.service
@@ -7,6 +7,9 @@ After=dbus.socket
 ExecStart=@CMAKE_INSTALL_PREFIX@/@INSTALL_DIR@/@EXE_NAME@ --id %i
 StandardOutput=journal
 StandardError=journal
+User=s3x
+Restart=always
+RestartSec=1s
 
 [Install]
 WantedBy=multi-user.target
