--- a/exes/CMakeLists.txt
+++ b/exes/CMakeLists.txt
@@ -7,3 +7,4 @@ add_subdirectory(ipc-ruler)
 add_subdirectory(signal_source)
 add_subdirectory(sensor-control)
 add_subdirectory(mqtt-bridge)
+add_subdirectory(op_enable)
