Live listening to changes on DBUS

--- a/cockpit/IPC/manifest.json
+++ b/cockpit/IPC/manifest.json
@@ -22,7 +22,7 @@
             "path": "index.html?service=list"
         },
         "tfc6": {
-            "label": "SVG Manipulation",
+            "label": "TFC Visual States",
             "path": "index.html?service=svg"
         }
     },
