--- a/exes/CMakeLists.txt
+++ b/exes/CMakeLists.txt
@@ -8,3 +8,4 @@ add_subdirectory(signal_source)
 add_subdirectory(sensor-control)
 add_subdirectory(mqtt-bridge)
 add_subdirectory(op_enable)
+add_subdirectory(track-control)
