this is getting big

--- a/exes/track-control/CMakeLists.txt
+++ b/exes/track-control/CMakeLists.txt
@@ -4,24 +4,30 @@ find_package(Boost REQUIRED)
 find_package(fmt CONFIG REQUIRED)
 find_package(ut CONFIG REQUIRED)
 find_package(glaze CONFIG REQUIRED)
+find_package(mp-units CONFIG REQUIRED)
 find_path(BEXT_SML_INCLUDE_DIRS "boost/sml.hpp")
 
-add_library(track_ctrl src/track_ctrl.cpp)
+add_library(track_ctrl src/ctrl.cpp)
 add_library(tfc::track_ctrl ALIAS track_ctrl)
 add_executable(track_control src/main.cpp)
 
 target_link_libraries(track_ctrl
-  PRIVATE
+  PUBLIC
+    mp-units::mp-units
+    tfc::confman
     fmt::fmt
     glaze::glaze
     Boost::boost
+    tfc::ipc
 )
 target_include_directories(track_ctrl
   PUBLIC
     inc/public
-  PRIVATE
-    inc
     ${BEXT_SML_INCLUDE_DIRS}
 )
 
-target_link_libraries(track_control PRIVATE tfc::track_ctrl)
+target_link_libraries(track_control
+  PRIVATE
+    tfc::base
+    tfc::track_ctrl
+)
