Added a small test exe

--- a/libs/motor/tests/CMakeLists.txt
+++ b/libs/motor/tests/CMakeLists.txt
@@ -1,8 +1,12 @@
 find_package(ut CONFIG REQUIRED)
 
 add_executable(motor_impl_test motor_impl_test.cxx)
+add_executable(sdbusplus_ping_test sdbusplus_ping_test.cpp)
 
 target_link_libraries(motor_impl_test PRIVATE Boost::ut tfc::motor tfc::base)
+
+find_package(Boost REQUIRED COMPONENTS )
+target_link_libraries(sdbusplus_ping_test PRIVATE PkgConfig::SDBUSPLUS Boost::boost)
 
 add_test(
     NAME
