--- a/libs/motor/tests/CMakeLists.txt
+++ b/libs/motor/tests/CMakeLists.txt
@@ -2,8 +2,10 @@ find_package(ut CONFIG REQUIRED)
 
 add_executable(motor_impl_test motor_impl_test.cxx)
 add_executable(sdbusplus_ping_test sdbusplus_ping_test.cpp)
+add_executable(mock_test mock_test.cpp)
 
 target_link_libraries(motor_impl_test PRIVATE Boost::ut tfc::motor tfc::base)
+target_link_libraries(mock_test PRIVATE Boost::ut tfc::motor tfc::base)
 
 find_package(Boost REQUIRED COMPONENTS )
 target_link_libraries(sdbusplus_ping_test PRIVATE PkgConfig::SDBUSPLUS Boost::boost)
@@ -14,6 +16,13 @@ add_test(
     COMMAND
     motor_impl_test
 )
+add_test(
+        NAME
+        mock_test
+        COMMAND
+        mock_test
+)
+
 if(BUILD_EXAMPLES)
   add_subdirectory(example)
 endif()
