move code around wip

--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -7,6 +7,7 @@ add_subdirectory(dbus_util)
 add_subdirectory(stx)
 add_subdirectory(logger)
 add_subdirectory(progbase)
+add_subdirectory(sml)
 add_subdirectory(confman)
 add_subdirectory(ipc)
 add_subdirectory(soem_interface)
