Dont build examples when BUILD_EXAMPLES off

--- a/libs/confman/testing/CMakeLists.txt
+++ b/libs/confman/testing/CMakeLists.txt
@@ -1,4 +1,6 @@
-add_subdirectory(examples)
+if(BUILD_EXAMPLES)
+  add_subdirectory(examples)
+endif()
 add_subdirectory(mocks)
 add_subdirectory(stubs)
 add_subdirectory(tests)
