--- a/libs/ipc/testing/CMakeLists.txt
+++ b/libs/ipc/testing/CMakeLists.txt
@@ -1,3 +1,5 @@
-add_subdirectory(examples)
+if(BUILD_EXAMPLES)
+  add_subdirectory(examples)
+endif()
 add_subdirectory(tests)
 add_subdirectory(mocks)
