Update glaze add mass (#316)
* wip

* sketching up the config outline

* wip

* update glaze to 1.8.0

* config of weigher is looking pretty good

* refactor calibrate thingy

* minor changes

* debugging UI save of variant

* somewhat working config for weigher

* min max items shown for std array

* rename eilersen header

* adding mass to ipc wip

* mass ipc as expected

* missing mass name

* making changes towards beve

* add superflous info for frontend

* idk

* move vcpkg sysroot to binary directory

* Revert "making changes towards beve"

This reverts commit 6f94d95ce5e7b01ce9b7723331cc1da577be08fc.

* revert beve test

* packet support for std expected of mp units

* trying to get tfcctl to compile

* starting an implementation of a tachometer

* many many many changes, stuck on linker error

* todo revert, temp update of glaze

* Revert "move vcpkg sysroot to binary directory"

This reverts commit 2a929b0219ba7d92a04a9861c8bfe32fe8e75e2d.

* debugging clang build

* the linker error is gone, this was hell

* everything compiling

* throw lexical cast into the trash bin

* cleaning up

* fix packet of expected

* cleanup after rebase

* making the code more tough raawwr uurrg

* small fixes

* making progress

* revert temporary port add of glaze

* move vcpkg dependencies to binary directory

* update commit id to the update this night

* remove weigher changes in ethercat

* revert toolchain

* move client

* revert changes

* revert unneccessary include

* revert unnecessary debug param

* indent correctly

* revert added include by clion

* format

* remove premature tacho

* Update libs/stx/inc/public/tfc/stx/glaze_meta.hpp

* simplify location of vcpkg

* remove comments

* simplify concept

* remove comment

* fix name of milligram

* change log to error for invalid user input

* update under range comment

* add bloated serializing 

--- a/exes/tfcctl/CMakeLists.txt
+++ b/exes/tfcctl/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_executable(tfcctl src/tfcctl.cpp)
 
 find_package(Boost REQUIRED COMPONENTS program_options)
+find_package(mp-units CONFIG REQUIRED)
 
 target_link_libraries(tfcctl
   PUBLIC
@@ -8,6 +9,7 @@ target_link_libraries(tfcctl
     tfc::base
     tfc::logger
     Boost::program_options
+    mp-units::core
 )
 
 include(GNUInstallDirs)
