First implementation. Broken

--- a/exes/CMakeLists.txt
+++ b/exes/CMakeLists.txt
@@ -6,3 +6,4 @@ add_subdirectory(tfcctl)
 add_subdirectory(ipc-ruler)
 add_subdirectory(signal_source)
 add_subdirectory(mqtt-bridge)
+add_subdirectory(ttui)
