--- a/libs/ipc/testing/CMakeLists.txt
+++ b/libs/ipc/testing/CMakeLists.txt
@@ -1,5 +1,7 @@
 if(BUILD_EXAMPLES)
   add_subdirectory(examples)
 endif()
-add_subdirectory(tests)
+if (BUILD_TESTING)
+  add_subdirectory(tests)
+endif ()
 add_subdirectory(mocks)
