--- a/libs/tfcConfig.cmake.in
+++ b/libs/tfcConfig.cmake.in
@@ -1,4 +1,6 @@
 
+# todo split tfcConfig to core or base and mock/stub part
+find_package(GTest CONFIG REQUIRED COMPONENTS gmock)
 find_package(glaze CONFIG REQUIRED)
 find_package(fmt CONFIG REQUIRED)
 find_package(Boost REQUIRED COMPONENTS program_options)
