--- a/libs/configure_options/CMakeLists.txt
+++ b/libs/configure_options/CMakeLists.txt
@@ -2,18 +2,18 @@ project(configure_options)
 cmake_minimum_required(VERSION 3.21)
 
 
-configure_file(${CMAKE_CURRENT_LIST_DIR}/configure_options.hpp.in ${CMAKE_CURRENT_LIST_DIR}/inc/public/tfc/configure_options.hpp)
+configure_file(${CMAKE_CURRENT_LIST_DIR}/configure_options.hpp.in ${CMAKE_CURRENT_BINARY_DIR}/inc/public/tfc/configure_options.hpp)
 
 add_library(configure_options INTERFACE)
 add_library(tfc::configure_options ALIAS configure_options)
 
 target_include_directories(configure_options
   INTERFACE
-    $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/inc/public>
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/inc/public>
     $<INSTALL_INTERFACE:include>
 )
 
-configure_file(${CMAKE_CURRENT_LIST_DIR}/dbus-tfc.conf.in ${CMAKE_CURRENT_LIST_DIR}/generated/tfc.conf)
+configure_file(${CMAKE_CURRENT_LIST_DIR}/dbus-tfc.conf.in ${CMAKE_CURRENT_BINARY_DIR}/generated/tfc.conf)
 
 include(tfc_install)
 tfc_install_lib(configure_options)
@@ -22,7 +22,7 @@ if (${CMAKE_INSTALL_PREFIX} MATCHES "^\/usr")
   include(GNUInstallDirs)
   install(
     FILES
-      ${CMAKE_CURRENT_LIST_DIR}/generated/tfc.conf
+      ${CMAKE_CURRENT_BINARY_DIR}/generated/tfc.conf
     DESTINATION
       /${CMAKE_INSTALL_SYSCONFDIR}/dbus-1/system.d
     CONFIGURATIONS Release
