--- a/libs/motor/tests/CMakeLists.txt
+++ b/libs/motor/tests/CMakeLists.txt
@@ -5,10 +5,19 @@ add_executable(motor_impl_test motor_impl_test.cxx)
 target_link_libraries(motor_impl_test PRIVATE Boost::ut tfc::motor tfc::base)
 
 add_test(
-    NAME
+  NAME
     motor_impl_test
-    COMMAND
+  COMMAND
     motor_impl_test
+)
+
+add_executable(positioner_test positioner_test.cpp)
+target_link_libraries(positioner_test PRIVATE Boost::ut tfc::motor tfc::base)
+add_test(
+  NAME
+    positioner_test
+  COMMAND
+    positioner_test
 )
 if(BUILD_EXAMPLES)
   add_subdirectory(example)
