--- a/.github/workflows/ubuntu-packaging.yml
+++ b/.github/workflows/ubuntu-packaging.yml
@@ -5,8 +5,12 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+    paths:
+      - '.github/workflows/ubuntu-packaging.yml'
+      - 'cmake/tfc_cpack.cmake'
   release:
     types: [ "created" ]
+  workflow_dispatch:
 
 env:
   CONFIGURATION_DIRECTORY: ${{ github.workspace }}
