Artifact retention packaging (#339)
* Don't store packaging artifacts

* Don't run packaging on pull requests unless changing workflow or cpack cmake

--- a/.github/workflows/ubuntu-packaging.yml
+++ b/.github/workflows/ubuntu-packaging.yml
@@ -5,8 +5,12 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+    paths:
+      - '.github/workflows/ubuntu-packaging.yml'
+      - 'cmake/tfc_cpack.cmake'
   release:
     types: [ "created" ]
+  workflow_dispatch:
 
 env:
   CONFIGURATION_DIRECTORY: ${{ github.workspace }}
@@ -81,6 +85,7 @@ jobs:
         with:
           name: tfc-framework-${{matrix.build_type}}
           path: build/pack-*/*.deb
+          retention-days: 1
 
       - name: Upload Release deb file
         if: github.event_name == 'release' && github.event.action == 'created'
@@ -99,6 +104,8 @@ jobs:
         with:
           name: tfc-framework-${{matrix.build_type}}
           path: build/pack-*/*.rpm
+          retention-days: 1
+
 
       - name: Upload Release rpm file
         if: github.event_name == 'release' && github.event.action == 'created'
@@ -117,6 +124,8 @@ jobs:
         with:
           name: tfc-framework-${{matrix.build_type}}
           path: build/pack-*/*.tar.gz
+          retention-days: 1
+
 
       - name: Upload Release tar file
         if: github.event_name == 'release' && github.event.action == 'created'
