add mass example, this PR is responding to failed constructor for mass signal so added test to check for this

--- a/libs/ipc/testing/tests/CMakeLists.txt
+++ b/libs/ipc/testing/tests/CMakeLists.txt
@@ -1,5 +1,6 @@
 find_package(ut CONFIG REQUIRED)
 find_package(glaze CONFIG REQUIRED)
+find_package(mp-units CONFIG REQUIRED)
 
 add_executable(ipc_manager_test ipc_manager_test.cpp)
 add_test(
@@ -11,7 +12,7 @@ add_test(
 target_link_libraries(ipc_manager_test PRIVATE tfc::ipc tfc::confman Boost::ut glaze::glaze)
 
 add_executable(ipc_test ipc_test.cpp)
-target_link_libraries(ipc_test PRIVATE Boost::ut tfc::ipc tfc::base)
+target_link_libraries(ipc_test PRIVATE Boost::ut tfc::ipc tfc::base mp-units::si)
 add_test(NAME ipc_test COMMAND ipc_test)
 
 add_executable(item_test item_test.cpp)
