add example for mass

--- a/examples/mass_example/CMakeLists.txt
+++ b/examples/mass_example/CMakeLists.txt
@@ -1,6 +1,10 @@
-add_executable(mass_exmple main.cpp)
-target_link_libraries(mass_exmple
+add_executable(mass_example main.cpp)
+
+find_package(mp-units CONFIG REQUIRED)
+
+target_link_libraries(mass_example
   PRIVATE
     tfc::base
     tfc::ipc
+    mp-units::si
 )
