change tests in accordance

--- a/exes/mqtt-bridge/tests/CMakeLists.txt
+++ b/exes/mqtt-bridge/tests/CMakeLists.txt
@@ -2,6 +2,7 @@ add_executable(test_mqtt_bridge
   ../src/client.cpp
   ../src/spark_plug_interface.cpp
   ../src/external_to_tfc.cpp
+  ../src/signal_names.cpp
   src/test_external_to_tfc.cpp
   src/unit_tests.cpp
 )
