Positioner error detection (#348)
* Positioner continuance
* change position to micro meters instead of milli meters
* increasing test coverage
* adding future thoughts
* positioner is working going forward and backwards
* asio condition variable to generically store notification handlers

* sdbusplus singleton is somehow corrupted only on gcc debug mode
the error originates from using this object, https://github.com/openbmc/sdbusplus/blob/master/include/sdbusplus/sdbus.hpp#L576
temporarily disable the according tests, need to test the code in production use

* rename tacho config to position mode

* only store new position states to tachometer buffer, simplifies logic to determine velocity

* calculating average in constant time for each increment

* standard deviation calculation 

* pulling statistics from tachometer

* positioner now knows simple statistics on updates

* velocity in progress missing tests

* add constructor to positioner allowing propagating config defaults

* velocity tested

* error wip

* injecting error in call path

* Our IPC layer only transmits on new events.

Using that information we don't need our pins old state cause embedded in that information is which pin got triggered

---------

Co-authored-by: Ómar Högni Guðmarsson <ohg@skaginn3x.com>

--- a/libs/motor/tests/CMakeLists.txt
+++ b/libs/motor/tests/CMakeLists.txt
@@ -12,13 +12,17 @@ add_test(
 )
 
 add_executable(positioner_test positioner_test.cpp)
-target_link_libraries(positioner_test PRIVATE Boost::ut tfc::motor tfc::base)
+target_link_libraries(positioner_test PRIVATE Boost::ut tfc::motor tfc::base tfc::mock_ipc tfc::testing tfc::stub_confman)
 add_test(
   NAME
     positioner_test
   COMMAND
     positioner_test
 )
+# todo remove when sdbusplus starts behaving
+if (CMAKE_BUILD_TYPE STREQUAL "Debug")
+  target_compile_definitions(positioner_test PRIVATE DEBUG)
+endif()
 if(BUILD_EXAMPLES)
   add_subdirectory(example)
 endif()
