--- a/exes/mqtt-bridge/CMakeLists.txt
+++ b/exes/mqtt-bridge/CMakeLists.txt
@@ -2,6 +2,7 @@ add_executable(mqtt_bridge
   src/spark_plug_interface.cpp
   src/client.cpp
   src/external_to_tfc.cpp
+  src/signal_names.cpp
   src/main.cpp
 )
 
