Motor interface continuation (#317)
* Continuation of motor interface
* Positioner error detection (#348)
* change position to micro meters instead of milli meters
* increasing test coverage
* adding future thoughts
* positioner is working going forward and backwards
* asio condition variable to generically store notification handlers
* sdbusplus singleton is somehow corrupted only on gcc debug mode
the error originates from using this object, https://github.com/openbmc/sdbusplus/blob/master/include/sdbusplus/sdbus.hpp#L576
temporarily disable the according tests, need to test the code in production use
* only store new position states to tachometer buffer, simplifies logic to determine velocity
* calculating average in constant time for each increment
* standard deviation calculation 
* pulling statistics from tachometer
* positioner now knows simple statistics on updates
* add constructor to positioner allowing propagating config defaults
* Our IPC layer only transmits on new events.

Using that information we don't need our pins old state cause embedded in that information is which pin got triggered

---------

Co-authored-by: Ómar Högni Guðmarsson <ohg@skaginn3x.com>
* Positioning looks to be working
This is the simple implementation of our positioning. It needs to be optimized heavily
* Old unit symbol std::string_view impl reverted
* Remove unused includes
* Update libs/stx/inc/public/tfc/utils/units_glaze_meta.hpp

---------

Co-authored-by: Jón Bjarni <jbbjarnason@gmail.com>

--- a/exes/ethercat/CMakeLists.txt
+++ b/exes/ethercat/CMakeLists.txt
@@ -25,17 +25,19 @@ target_link_libraries(ec
     tfc::confman
     tfc::soem_interface
     tfc::stx
+    tfc::motor
     mp-units::si
     fmt::fmt
 )
 
 add_executable(ethercat src/main.cpp)
 
-find_package(Boost REQUIRED COMPONENTS program_options)
+find_package(Boost REQUIRED COMPONENTS program_options coroutine)
 target_link_libraries(ethercat
   PUBLIC
     tfc::ec
     Boost::program_options
+    Boost::coroutine
 )
 
 if (BUILD_TESTING)
