add test for config error in positioning

--- a/libs/motor/tests/example/CMakeLists.txt
+++ b/libs/motor/tests/example/CMakeLists.txt
@@ -6,3 +6,11 @@ target_link_libraries(motor_example
     tfc::logger
     tfc::motor
 )
+
+add_executable(positioner_example positioner_example.cpp)
+
+target_link_libraries(positioner_example
+  tfc::base
+  tfc::logger
+  tfc::motor
+)
