Works every build now and build time resolution set to seconds

--- a/libs/progbase/CMakeLists.txt
+++ b/libs/progbase/CMakeLists.txt
@@ -1,8 +1,6 @@
 project(progbase)
 cmake_minimum_required(VERSION 3.21)
 
-include(tfc_version)
-
 add_library(base
   src/progbase.cpp
 )
@@ -36,12 +34,24 @@ if (BUILD_TESTING)
   add_subdirectory(tests)
 endif ()
 
-# generate file version.hpp based on version.hpp.in
-configure_file(
-        ${CMAKE_CURRENT_LIST_DIR}/inc/tfc/version.hpp.in
+add_custom_command(
+        OUTPUT
         ${CMAKE_CURRENT_BINARY_DIR}/inc/tfc/version.hpp
-        @ONLY
+        ALL
+        COMMAND
+        ${CMAKE_COMMAND} -D GIT_HASH=${GIT_HASH} -D GIT_AUTHOR=${GIT_AUTHOR} -D GIT_BRANCH=${GIT_BRANCH} -D GIT_TAG=${GIT_TAG} -D GIT_IS_DIRTY=${GIT_IS_DIRTY} -D GIT_COMMIT_DATE=${GIT_COMMIT_DATE} -D IN_FILE=${CMAKE_CURRENT_SOURCE_DIR}/inc/tfc/version.hpp.in -D OUT_FILE=${CMAKE_CURRENT_BINARY_DIR}/inc/tfc/version.hpp -P ${CMAKE_SOURCE_DIR}/cmake/tfc_version.cmake
+        WORKING_DIRECTORY
+        ${CMAKE_SOURCE_DIR}
 )
 
+add_custom_target(
+        generate_version_header
+        ALL
+        COMMAND
+        ${CMAKE_COMMAND} -D GIT_HASH=${GIT_HASH} -D GIT_AUTHOR=${GIT_AUTHOR} -D GIT_BRANCH=${GIT_BRANCH} -D GIT_TAG=${GIT_TAG} -D GIT_IS_DIRTY=${GIT_IS_DIRTY} -D GIT_COMMIT_DATE=${GIT_COMMIT_DATE} -D IN_FILE=${CMAKE_CURRENT_SOURCE_DIR}/inc/tfc/version.hpp.in -D OUT_FILE=${CMAKE_CURRENT_BINARY_DIR}/inc/tfc/version.hpp -P ${CMAKE_SOURCE_DIR}/cmake/tfc_version.cmake
+        WORKING_DIRECTORY
+        ${CMAKE_SOURCE_DIR}
+)
+add_dependencies(base generate_version_header)
 include(tfc_install)
 tfc_install_lib(base)
