--- a/libs/progbase/inc/tfc/version.hpp.in
+++ b/libs/progbase/inc/tfc/version.hpp.in
@@ -5,6 +5,7 @@
 namespace tfc::base{
 class version {
 public:
+    ~version();
     virtual constexpr auto get_git_hash() const noexcept -> std::string_view { return git_hash; }
     virtual constexpr auto get_git_tag() const noexcept -> std::string_view { return git_tag; }
     virtual constexpr auto get_git_branch() const noexcept -> std::string_view { return git_branch; }
