--- a/libs/progbase/CMakeLists.txt
+++ b/libs/progbase/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 3.21)
 
 add_library(base
   src/progbase.cpp
+  src/version.cpp
 )
 add_library(tfc::base ALIAS base)
 get_target_property(TFC_LOGGER_INCLUDE_DIRS tfc::logger INTERFACE_INCLUDE_DIRECTORIES)
@@ -12,11 +13,13 @@ target_include_directories(base
     $<INSTALL_INTERFACE:include>
   PRIVATE
     inc
+    ${CMAKE_CURRENT_BINARY_DIR}/inc
     ${TFC_LOGGER_INCLUDE_DIRS}
 )
 
 find_package(Boost REQUIRED COMPONENTS program_options)
 find_package(fmt CONFIG REQUIRED)
+
 
 target_link_libraries(base
   PRIVATE
@@ -32,5 +35,24 @@ if (BUILD_TESTING)
   add_subdirectory(tests)
 endif ()
 
+add_custom_command(
+        OUTPUT
+        ${CMAKE_CURRENT_BINARY_DIR}/inc/tfc/version.hpp
+        ALL
+        COMMAND
+        ${CMAKE_COMMAND} -D GIT_HASH=${GIT_HASH} -D GIT_AUTHOR=${GIT_AUTHOR} -D GIT_BRANCH=${GIT_BRANCH} -D GIT_TAG=${GIT_TAG} -D GIT_IS_DIRTY=${GIT_IS_DIRTY} -D GIT_COMMIT_DATE=${GIT_COMMIT_DATE} -D IN_FILE=${CMAKE_CURRENT_SOURCE_DIR}/inc/tfc/version.hpp.in -D OUT_FILE=${CMAKE_CURRENT_BINARY_DIR}/inc/tfc/version.hpp -P ${CMAKE_SOURCE_DIR}/cmake/tfc_version.cmake
+        WORKING_DIRECTORY
+        ${CMAKE_SOURCE_DIR}
+)
+
+add_custom_target(
+        generate_version_header
+        ALL
+        COMMAND
+        ${CMAKE_COMMAND} -D GIT_HASH=${GIT_HASH} -D GIT_AUTHOR=${GIT_AUTHOR} -D GIT_BRANCH=${GIT_BRANCH} -D GIT_TAG=${GIT_TAG} -D GIT_IS_DIRTY=${GIT_IS_DIRTY} -D GIT_COMMIT_DATE=${GIT_COMMIT_DATE} -D IN_FILE=${CMAKE_CURRENT_SOURCE_DIR}/inc/tfc/version.hpp.in -D OUT_FILE=${CMAKE_CURRENT_BINARY_DIR}/inc/tfc/version.hpp -P ${CMAKE_SOURCE_DIR}/cmake/tfc_version.cmake
+        WORKING_DIRECTORY
+        ${CMAKE_SOURCE_DIR}
+)
+add_dependencies(base generate_version_header)
 include(tfc_install)
 tfc_install_lib(base)
