--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -31,6 +31,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
+          submodules: true
           fetch-depth: 0
       - name: Check if there are missing pragma once
         run: |
