--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -13,6 +13,8 @@ jobs:
     container: ghcr.io/skaginn3x/skaginn3x/framework/tfc-toolchain:sha-6cd5f4c
     steps:
       - uses: actions/checkout@v3
+        with:
+          submodules: true
       - uses: lukka/get-cmake@latest
       - name: Restore artifacts, or setup vcpkg (do not install any package)
         uses: lukka/run-vcpkg@v11
