--- a/.github/workflows/ubuntu-packaging.yml
+++ b/.github/workflows/ubuntu-packaging.yml
@@ -53,7 +53,7 @@ jobs:
         uses: lukka/run-cmake@v10.3
         with:
           cmakeListsTxtPath: '${{ github.workspace }}/CMakeLists.txt'
-          workflowPreset: 'packflow-${{ matrix.architecture }}-gcc-${{matrix.build_type}}'
+          workflowPreset: '${{ matrix.architecture }}-gcc-${{matrix.build_type}}'
 
       - name: Upload vcpkg log
         if: failure()
