simplifying systemd cmake dependence

--- a/exes/ipc-ruler/CMakeLists.txt
+++ b/exes/ipc-ruler/CMakeLists.txt
@@ -39,4 +39,5 @@ install(
   CONFIGURATIONS Debug
 )
 
+include(tfc_systemd)
 tfc_systemd_service_file(ipc-ruler "TFC Inter-process communication ruler")
