--- a/.github/workflows/ubuntu-packaging.yml
+++ b/.github/workflows/ubuntu-packaging.yml
@@ -7,7 +7,7 @@ on:
     branches: [ "main" ]
     paths:
       - '.github/workflows/ubuntu-packaging.yml'
-      - 'cmake/tfc_cpack.cmake'
+      - 'cmake'
   release:
     types: [ "created" ]
   workflow_dispatch:
