--- a/.github/workflows/ubuntu-packaging.yml
+++ b/.github/workflows/ubuntu-packaging.yml
@@ -7,7 +7,7 @@ on:
     branches: [ "main" ]
     paths:
       - '.github/workflows/ubuntu-packaging.yml'
-      - 'cmake/tfc_cpack.cmake'
+      - 'cmake'
   release:
     types: [ "created" ]
   workflow_dispatch:
@@ -32,6 +32,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
+          submodules: true
           fetch-depth: 0
 
       - name: Get release
@@ -52,7 +53,7 @@ jobs:
         uses: lukka/run-cmake@v10.3
         with:
           cmakeListsTxtPath: '${{ github.workspace }}/CMakeLists.txt'
-          workflowPreset: 'packflow-${{ matrix.architecture }}-gcc-${{matrix.build_type}}'
+          workflowPreset: '${{ matrix.architecture }}-gcc-${{matrix.build_type}}'
 
       - name: Upload vcpkg log
         if: failure()
